SERVER-129095 setAllowChunkOperations: yield session before waiting for operations (#56175)

GitOrigin-RevId: ea75aa2452726866e691897b17e797f8d368a89f